--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 	<section>
 		<h1>Liseth estuvo aqui</h1>
 	</section>
+
+	<footer>
+		<p>Bill les desea buenas noches</p>
+	</footer>
 </div>
 
 
