--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 		<p>Bill les desea buenas noches</p>
 		<p>Bienvenidos al sena</p>
 	</footer>
+
+	<section>
+		<h1>ManuelaUE paso aquí</h1>
+	</section>
 </div>
 
 
